--- a/src/index.css
+++ b/src/index.css
@@ -305,15 +305,17 @@
     padding: 20px; /* Adds padding around the content */
     border-radius: 8px; /* Rounds the corners */
     width: 850px; /* Sets a fixed width */
-    height: 500px; /* Sets a fixed height */
+    height: 400px; /* Sets a fixed height */
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); /* Adds a box shadow */
     position: relative; /* Positions elements relative to the popup */
   }
   
   /* Styles the image within the popup to take full width and height */
   .popup-image {
-    width: 100%;
-    height: 100%;
+    width: 800px;
+    height: 380px;
+    margin-top: 10px;
+    margin-left: 20px;
   }
   
   /* Styles the close button inside image popups with absolute positioning,
@@ -1349,8 +1351,13 @@
         
           /* Reduces the size of the image popup content */
           .image-popup-content {
-            width: 750px;
-            height: 500px;
+            width: 95%;
+            height: 360px;
+          }
+
+          .popup-image {
+            width: 760px;
+            height: 300px;
           }
         
           /* Adjusts the popup content size for smaller screens */
@@ -1590,13 +1597,13 @@
           /* Reduces the size of image popup content */
           .image-popup-content {
             width: 750px;
-            height: 500px;
+            height: 350px;
           }
         
           /* Ensures the popup image fills the content area */
           .popup-image {
-            width: 100%;
-            height: 100%;
+            width: 660px;
+            height: 300px;
           }
         
           /* Adjusts the popup content size for smaller screens */
@@ -1851,12 +1858,6 @@
             font-size: 14px;
           }
         
-          /* Reduces the size of image popup content */
-          .image-popup-content {
-            width: 750px;
-            height: 500px;
-          }
-        
           .recent-bills {
             gap: 8px;
           }
@@ -1864,11 +1865,17 @@
           .bill-item {
             padding: 12px;
           }
+
+          /* Reduces the size of image popup content */
+          .image-popup-content {
+            width: 90%;
+            height: 40%;
+          }
         
           /* Ensures the popup image fills the content area */
           .popup-image {
-            width: 100%;
-            height: 100%;
+            width: 620px;
+            height: 300px;
           }
         
           /* Adjusts the popup content size for smaller screens */
@@ -2156,14 +2163,14 @@
         
           /* Reduces the size of image popup content */
           .image-popup-content {
-            width: 750px;
-            height: 500px;
+            width: 550px;
+            height: 200px;
           }
         
           /* Ensures the popup image fills the content area */
           .popup-image {
-            width: 100%;
-            height: 100%;
+            width: 90%;
+            height: 90%;
           }
         
            /* Adjusts the popup content size for smaller screens */
@@ -2430,13 +2437,13 @@
   }
   
   .popup-image {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
   }
   
     .popup-content {
       width: 300px;
-    height: 500px;
+      height: 500px;
     }
   
     .popup-content h3 {
@@ -2944,13 +2951,13 @@ font-size: 10px;
 }
 
 .image-popup-content {
-  width: 280px;
-  height: 400px;
+  width: 90%;
+  height: 200px;
 }
 
 .popup-image {
-  width: 95%;
-  height: 95%;
+  width: 90%;
+  height: 90%;
 }
 
   .popup-content {
