--- a/src/index.css
+++ b/src/index.css
@@ -1662,7 +1662,7 @@
   
   /* Applies styles for landscape-oriented mobile devices with max width 1000px,
          max height 500px, and landscape orientation */
-         @media (max-width: 1000px) and (max-height: 500px) and (orientation: landscape) {
+         @media only screen and (max-width: 1000px) and (max-height: 500px) and (orientation: landscape) {
           /* Hides the desktop navigation on smaller screens */
           .desktop-nav-links {
             display: none; /* Hides the desktop navigation on mobile */
@@ -1979,7 +1979,7 @@
   
   /* Applies styles for landscape-oriented mobile devices with max width 852px,
          max height 435px, and landscape orientation */
-         @media (max-width: 852px) and (max-height: 395px) and (orientation: landscape) {
+         @media only screen and (max-width: 852px) and (max-height: 395px) and (orientation: landscape) {
           /* Hides the desktop navigation on smaller screens */
           .desktop-nav-links {
             display: none; /* Hides the desktop navigation on mobile */
