--- a/src/index.css
+++ b/src/index.css
@@ -2109,6 +2109,8 @@
           /* Adjusts the content container to use 90% of viewport width,
                  adds right margin, and reduces font size */
           .content-container {
+            display: flex;
+            flex: 1;
             width: 520px;
             margin-left: 10px;
             font-size: 10px;
