--- a/src/index.css
+++ b/src/index.css
@@ -1979,7 +1979,7 @@
   
   /* Applies styles for landscape-oriented mobile devices with max width 852px,
          max height 435px, and landscape orientation */
-         @media only screen and (max-width: 858px) and (max-height: 394px) and (orientation: landscape) {
+         @media only screen and (max-width: 853px) and (max-height: 394px) and (orientation: landscape) {
           /* Hides the desktop navigation on smaller screens */
           .desktop-nav-links {
             display: none; /* Hides the desktop navigation on mobile */
@@ -2093,7 +2093,7 @@
         
           /* Sets the body background color to Violet */
           body {
-            background-color: #EE82EE; /* Violet */
+            background-color: #20B2AA; /* Violet */
           }
         
           /* Styles the main heading in the welcome section with reduced font size */
