--- a/src/index.css
+++ b/src/index.css
@@ -1662,7 +1662,7 @@
   
   /* Applies styles for landscape-oriented mobile devices with max width 1000px,
          max height 500px, and landscape orientation */
-         @media only screen and (max-width: 935px) and (max-height: 496px) and (orientation: landscape) {
+         @media only screen and (max-width: 1000px) and (max-height: 496px) and (orientation: landscape) {
           /* Hides the desktop navigation on smaller screens */
           .desktop-nav-links {
             display: none; /* Hides the desktop navigation on mobile */
@@ -1794,7 +1794,7 @@
           .content-container {
             width: 600px;
             margin-left: auto;
-            font-size: 10px !important;
+            font-size: 10px;
           }
 
           .thank-you-message{
