--- a/src/index.css
+++ b/src/index.css
@@ -2086,22 +2086,13 @@
           /* Adjusts the content container to use 90% of viewport width,
                  adds right margin, and reduces font size */
           .content-container {
-            width: 580px;
+            width: 600px;
             margin-left: 10px;
-            font-size: 10px;
-          }
-        
-          .mission-block {
-            font-size: 10px;
+            font-size: 10px !important;
           }
 
           .thank-you-message{
             font-size: 12px;
-          }
-        
-          /* Increases the bottom margin of the model section */
-          .model-section {
-            font-size: 10px;
           }
         
           /* Adjusts padding of instruction items */
@@ -2109,22 +2100,8 @@
             padding: 5px;
           }
         
-          /* Sets the font size of paragraphs in specific instruction items */
-          .instruction-item-one p {
-            font-size: 10px;
-          }
-        
-          /* Sets the font size of paragraphs in specific instruction items */
-          .instruction-item-two-to-four p {
-            font-size: 10px;
-          }
-        
           .instruction-separator {
             margin-top: 50px;
-          }
-          /* Sets the font size of paragraphs in specific instruction items */
-          .instruction-item-five p {
-            font-size: 10px;
           }
         
           .try-it-btn {
@@ -2133,7 +2110,7 @@
           }
       
           .Recent-bills-line{
-            width: 36%;
+            width: 42%;
           }
       
         
