--- a/src/index.css
+++ b/src/index.css
@@ -2086,9 +2086,9 @@
           /* Adjusts the content container to use 90% of viewport width,
                  adds right margin, and reduces font size */
           .content-container {
-            width: 650px;
-            margin-left: auto;
-            font-size: 10px;
+            width: 630px;
+            margin-left: 8px;
+            font-size: 10px !important;
           }
 
           .thank-you-message{
