--- a/src/index.css
+++ b/src/index.css
@@ -2070,7 +2070,7 @@
         
           /* Sets the body background color to Violet */
           body {
-            background-color: #20B2AA; /* Violet */
+            background-color: #20B2AA; /* Green-Blue*/
           }
         
           /* Styles the main heading in the welcome section with reduced font size */
