--- a/src/index.css
+++ b/src/index.css
@@ -2068,7 +2068,7 @@
             box-sizing: border-box;
           }
         
-          /* Sets the body background color to Violet */
+          /* Sets the body background color to Green-Blue */
           body {
             background-color: #20B2AA; /* Green-Blue*/
           }
