--- a/src/index.css
+++ b/src/index.css
@@ -2086,9 +2086,9 @@
           /* Adjusts the content container to use 90% of viewport width,
                  adds right margin, and reduces font size */
           .content-container {
-            width: 750px;
+            width: 800px;
             margin-left: 12px;
-            font-size: 10px !important;
+            font-size: 10px;
           }
 
           .thank-you-message{
