--- a/src/index.css
+++ b/src/index.css
@@ -1663,7 +1663,7 @@
   
   /* Applies styles for landscape-oriented mobile devices with max width 1000px,
          max height 500px, and landscape orientation */
-         @media only screen and (max-width: 1000px) and (max-height: 496px) and (orientation: landscape) {
+         @media only screen and (max-width: 1000px) and (max-height: 500px) and (orientation: landscape) {
           /* Hides the desktop navigation on smaller screens */
           .desktop-nav-links {
             display: none; /* Hides the desktop navigation on mobile */
@@ -1957,7 +1957,7 @@
   
   /* Applies styles for landscape-oriented mobile devices with max width 852px,
          max height 435px, and landscape orientation */
-         @media only screen and (max-width: 852px) and (max-height: 395px) and (orientation: landscape) {
+         @media only screen and (max-width: 852px) and (max-height: 435px) and (orientation: landscape) {
           /* Hides the desktop navigation on smaller screens */
           .desktop-nav-links {
             display: none; /* Hides the desktop navigation on mobile */
@@ -3106,7 +3106,8 @@
     .send-button{
       padding: 10px 20px; /* Adds padding */
       font-size: 16px; /* Increases the font size */
-      width: 98%; /* Makes the button full width */
+      width: 362px; /* Makes the button full width */
+      margin-right: 8px;
     }
   
     /* Ensures the about page takes up 90% of the width on smaller screens */
@@ -3154,7 +3155,7 @@
   
     /* Styles team members with fixed height */
     .team-member {
-      height: 430px;
+      height: 340px;
     }
   
     /* Styles the team member images with reduced size,
@@ -3282,18 +3283,18 @@
 
   /* Welcome Section */
   .welcome-section h1 {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   /* Welcome Section */
   .welcome-section p {
-    font-size: 12px;
+    font-size: 10px;
   }
  
  .content-container {
-  width: 350px;
+  width: 340px;
    font-size: 10px;
-   margin-left: 20px;
+   margin-left: 10px;
  }
   
   .instructions-section {
@@ -3472,14 +3473,14 @@ font-size: 10px;
   .send-button {
     padding: 10px 20px; /* Adds padding */
     font-size: 16px; /* Increases the font size */
-    width: 90%; /* Makes the button full width */
+    width: 248px; /* Makes the button full width */
     margin-top: 10px; /* Adds space above the button */
-	margin-left: 5px;
+	margin-left: -3px;
   }
 
   .about-page {
     padding: 30px 10px; /* Adds padding */
-    width: 90%; /* Ensures full width for mobile */
+    width: 95%; /* Ensures full width for mobile */
   }
 
   /* Header and Titles */
@@ -3512,7 +3513,7 @@ font-size: 10px;
   }
 
   .team-member {
-    height: 430px;
+    height: 350px;
   }
 
   .team-member img {
