--- a/src/index.css
+++ b/src/index.css
@@ -1663,7 +1663,7 @@
   
   /* Applies styles for landscape-oriented mobile devices with max width 1000px,
          max height 500px, and landscape orientation */
-         @media only screen and (max-width: 1000px) and (max-height: 500px) and (orientation: landscape) {
+         @media (max-width: 926px) and (max-height: 428px)  {
           /* Hides the desktop navigation on smaller screens */
           .desktop-nav-links {
             display: none; /* Hides the desktop navigation on mobile */
@@ -1957,7 +1957,7 @@
   
   /* Applies styles for landscape-oriented mobile devices with max width 852px,
          max height 435px, and landscape orientation */
-         @media only screen and (max-width: 852px) and (max-height: 435px) and (orientation: landscape) {
+         @media (max-width: 640px) and (max-height: 360px) {
           /* Hides the desktop navigation on smaller screens */
           .desktop-nav-links {
             display: none; /* Hides the desktop navigation on mobile */
@@ -2843,7 +2843,7 @@
   
   /* Applies styles for portrait-oriented big mobile devices with max width 490px,
          max height 1000px, and portrait orientation */
-  @media only screen and (max-width: 490px) and (max-height: 1000px) and (orientation: portrait) {
+         @media (max-width: 680px) and (max-height: 926px) {
     /* Hides the desktop navigation on smaller screens */
     .full-screen-nav-links {
       display: none; /* Hides the desktop navigation on mobile */
@@ -3179,7 +3179,7 @@
   
 /* Small Mobile Portrait */
 
-@media only screen and (max-width: 395px) and (max-height: 852px) and (orientation: portrait){
+@media (max-width: 360px) and (max-height: 640px){
   .full-screen-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
