--- a/src/index.css
+++ b/src/index.css
@@ -3142,7 +3142,7 @@
   
     .contact-page {
       width: 400px;
-      margin-bottom: 280px;
+      margin-bottom: 350px;
     }
     .contact-form-container {
       width: 380px; 
@@ -3199,6 +3199,10 @@
       width: 100%;
       margin-bottom: 20px;
     }
+
+    .sources-section{
+      margin-bottom: 100px;
+    }
   
     /* Team Member Section */
   
@@ -3206,7 +3210,7 @@
     .team-section {
       margin-left: 8px;
       width: 320px;
-      margin-bottom: 80px;
+      margin-bottom: 200px;
     }
   
     /* Styles team members with fixed height */
@@ -3629,7 +3633,7 @@ font-size: 10px;
   .team-section {
     margin-left: 8px;
     width: 200px;
-    margin-bottom: 20px;
+    margin-bottom: 180px;
   }
 
   .team-member {
