--- a/src/index.css
+++ b/src/index.css
@@ -2095,7 +2095,7 @@
     }
   
     .bill-item {
-      max-width: 320px; /* Limit the max width of each card */
+      width: 320px; /* Limit the max width of each card */
       padding: 20px; /* Add space inside the card */
     }
   
@@ -2726,7 +2726,7 @@
     }
   
     .bill-item {
-      max-width: 290px; /* Limit the max width of each card */
+      width: 290px; /* Limit the max width of each card */
       padding: 15px; /* Add space inside the card */
     }
   
@@ -2998,8 +2998,8 @@
     }
   
     .content-container {
-      width: 370px;
-      margin-left: 20px;
+      width: 88vw;
+      margin-left: 22px;
       font-size: 14px;
     }
   
@@ -3014,18 +3014,6 @@
       font-size: 14px;
     }
   
-    .recent-bills {
-      display: flex;
-      flex-wrap: wrap; /* Allow items to wrap to the next line */
-      gap: 15px; /* Space between the cards */
-      justify-content: center; /* Center the cards */
-    }
-  
-    .bill-item {
-      max-width: 380px; /* Limit the max width of each card */
-      padding: 15px; /* Add space inside the card */
-    }
-  
     .bill-item h4 {
       font-size: 18px; /* Adjust title font size */
       margin-bottom: 10px; /* Space below title */
@@ -3034,6 +3022,10 @@
     .bill-item p {
       font-size: 14px; /* Adjust paragraph font size */
       margin-bottom: 15px; /* Space below description */
+    }
+
+    .bill-item{
+      width: 600px;
     }
   
     .Recent-bills-line {
@@ -3270,7 +3262,7 @@
   
   /* Small Mobile Portrait */
   
-  @media (max-width: 390px) and (max-height: 780px) {
+  @media (max-width: 395px) and (max-height: 780px) {
     .full-screen-nav-links {
       display: none; /* Hides the desktop navigation on mobile */
     }
@@ -3383,9 +3375,9 @@
     }
   
     .content-container {
-      width: 330px;
+      width: 94vw;
       font-size: 10px;
-      margin-left: 20px;
+      margin-left: 10px;
     }
   
     .thank-you-message {
@@ -3417,7 +3409,7 @@
     }
   
     .instruction-separator {
-      margin-top: 200px;
+      margin-top: 150px;
     }
   
     .instruction-item-five p {
@@ -3425,19 +3417,11 @@
     }
   
     .try-it-btn {
-      margin-bottom: 90px;
       font-size: 10px;
     }
   
-    .recent-bills {
-      display: flex;
-      flex-wrap: wrap; /* Allow items to wrap to the next line */
-      gap: 15px; /* Space between the cards */
-      justify-content: center; /* Center the cards */
-    }
-  
     .bill-item {
-      max-width: 330px; /* Limit the max width of each card */
+      width: 360px; /* Limit the max width of each card */
       padding: 15px; /* Add space inside the card */
     }
   
@@ -3531,7 +3515,7 @@
     }
   
     .file-selected {
-      font-size: 10px; /* Sets the font size */
+      font-size: 12px; /* Sets the font size */
     }
   
     .file-selected .remove-btn {
@@ -3548,13 +3532,13 @@
     .text-box {
       width: 220px; /* Match the width of the upload box */
       height: 120px; /* Set a fixed height */
-      font-size: 10px; /* Font size */
+      font-size: 12px; /* Font size */
     }
   
     .summary-box {
       width: 220px;
       height: 290px;
-      font-size: 14px;
+      font-size: 12px;
     }
   
     .download-btn,
@@ -3563,7 +3547,7 @@
       width: 100%; /* Full width buttons */
       padding: 10px;
       font-size: 10px;
-      margin-left: auto;
+      margin-left: -2px;
     }
   
     .contact-page {
