--- a/src/index.css
+++ b/src/index.css
@@ -1661,7 +1661,7 @@
   
   /* Applies styles for landscape-oriented mobile devices with max width 1000px,
            max height 500px, and landscape orientation */
-  @media (max-width: 926px) and (max-height: 450px) {
+           @media only screen and (max-width: 1000px) and (max-height: 500px) and (orientation: landscape) {
     /* Hides the desktop navigation on smaller screens */
     .desktop-nav-links {
       display: none; /* Hides the desktop navigation on mobile */
@@ -1791,7 +1791,7 @@
     /* Adjusts the content container to use 90% of viewport width,
                    adds right margin, and reduces font size */
     .content-container {
-      width: 600px;
+      width: 68vw;
       margin-left: auto;
       font-size: 10px;
     }
@@ -2095,7 +2095,7 @@
     }
   
     .bill-item {
-      width: 320px; /* Limit the max width of each card */
+      max-width: 320px; /* Limit the max width of each card */
       padding: 20px; /* Add space inside the card */
     }
   
@@ -2258,7 +2258,7 @@
   
   /* Applies styles for landscape-oriented mobile devices with max width 852px,
            max height 435px, and landscape orientation */
-  @media (max-width: 800px) and (max-height: 390px) {
+           @media only screen and (max-width: 852px) and (max-height: 435px) and (orientation: landscape) {
     /* Hides the desktop navigation on smaller screens */
     .desktop-nav-links {
       display: none; /* Hides the desktop navigation on mobile */
@@ -2388,7 +2388,7 @@
     /* Adjusts the content container to use 90% of viewport width,
                    adds right margin, and reduces font size */
     .content-container {
-      width: 610px;
+      width: 80vw;
       margin-left: auto;
       font-size: 10px;
     }
@@ -2471,7 +2471,7 @@
       font-size: 10px; /* Reduces button font size */
       margin: 18px; /* Adds margin around the button */
       padding: 10px 20px; /* Adds padding inside the button */
-      margin-left: -10px;
+      margin-right: 30px;
     }
   
     /* Adjusts the upload dropzone size and margin for smaller screens */
@@ -2513,7 +2513,7 @@
     /* Adjusts the summary box size for smaller screens */
     .summary-box {
       height: 180px; /* Sets the height */
-      width: 360px; /* Sets the width */
+      width: 368px; /* Sets the width */
       font-size: 10px;
     }
   
@@ -2521,8 +2521,8 @@
     .download-btn,
     .do-it-again-btn,
     .pause-play-btn {
-      width: 200px;
-      padding: 5px 20px;
+      width: 210px;
+      padding: 5px 18px;
       font-size: 10px;
     }
   
@@ -2726,7 +2726,7 @@
     }
   
     .bill-item {
-      width: 290px; /* Limit the max width of each card */
+      max-width: 290px; /* Limit the max width of each card */
       padding: 15px; /* Add space inside the card */
     }
   
@@ -2998,8 +2998,8 @@
     }
   
     .content-container {
-      width: 88vw;
-      margin-left: 22px;
+      width: 370px;
+      margin-left: 20px;
       font-size: 14px;
     }
   
@@ -3014,6 +3014,18 @@
       font-size: 14px;
     }
   
+    .recent-bills {
+      display: flex;
+      flex-wrap: wrap; /* Allow items to wrap to the next line */
+      gap: 15px; /* Space between the cards */
+      justify-content: center; /* Center the cards */
+    }
+  
+    .bill-item {
+      max-width: 380px; /* Limit the max width of each card */
+      padding: 15px; /* Add space inside the card */
+    }
+  
     .bill-item h4 {
       font-size: 18px; /* Adjust title font size */
       margin-bottom: 10px; /* Space below title */
@@ -3022,10 +3034,6 @@
     .bill-item p {
       font-size: 14px; /* Adjust paragraph font size */
       margin-bottom: 15px; /* Space below description */
-    }
-
-    .bill-item{
-      width: 600px;
     }
   
     .Recent-bills-line {
@@ -3262,7 +3270,7 @@
   
   /* Small Mobile Portrait */
   
-  @media (max-width: 395px) and (max-height: 780px) {
+  @media (max-width: 390px) and (max-height: 780px) {
     .full-screen-nav-links {
       display: none; /* Hides the desktop navigation on mobile */
     }
@@ -3375,9 +3383,9 @@
     }
   
     .content-container {
-      width: 94vw;
+      width: 330px;
       font-size: 10px;
-      margin-left: 10px;
+      margin-left: 20px;
     }
   
     .thank-you-message {
@@ -3409,7 +3417,7 @@
     }
   
     .instruction-separator {
-      margin-top: 150px;
+      margin-top: 200px;
     }
   
     .instruction-item-five p {
@@ -3417,11 +3425,19 @@
     }
   
     .try-it-btn {
+      margin-bottom: 90px;
       font-size: 10px;
     }
   
+    .recent-bills {
+      display: flex;
+      flex-wrap: wrap; /* Allow items to wrap to the next line */
+      gap: 15px; /* Space between the cards */
+      justify-content: center; /* Center the cards */
+    }
+  
     .bill-item {
-      width: 360px; /* Limit the max width of each card */
+      max-width: 330px; /* Limit the max width of each card */
       padding: 15px; /* Add space inside the card */
     }
   
@@ -3515,7 +3531,7 @@
     }
   
     .file-selected {
-      font-size: 12px; /* Sets the font size */
+      font-size: 10px; /* Sets the font size */
     }
   
     .file-selected .remove-btn {
@@ -3532,13 +3548,13 @@
     .text-box {
       width: 220px; /* Match the width of the upload box */
       height: 120px; /* Set a fixed height */
-      font-size: 12px; /* Font size */
+      font-size: 10px; /* Font size */
     }
   
     .summary-box {
       width: 220px;
       height: 290px;
-      font-size: 12px;
+      font-size: 14px;
     }
   
     .download-btn,
@@ -3547,7 +3563,7 @@
       width: 100%; /* Full width buttons */
       padding: 10px;
       font-size: 10px;
-      margin-left: -2px;
+      margin-left: auto;
     }
   
     .contact-page {
@@ -3629,4 +3645,3 @@
       font-size: 0.75rem;
     }
   }
-  
