--- a/src/index.css
+++ b/src/index.css
@@ -2998,7 +2998,7 @@
     }
   
     .content-container {
-      width: 370px;
+      width: 90vw;
       margin-left: 20px;
       font-size: 14px;
     }
@@ -3270,7 +3270,7 @@
   
   /* Small Mobile Portrait */
   
-  @media (max-width: 390px) and (max-height: 780px) {
+  @media (max-width: 390px) and (max-height: 830px) {
     .full-screen-nav-links {
       display: none; /* Hides the desktop navigation on mobile */
     }
@@ -3383,7 +3383,7 @@
     }
   
     .content-container {
-      width: 330px;
+      width: 89vw;
       font-size: 10px;
       margin-left: 20px;
     }
@@ -3425,7 +3425,6 @@
     }
   
     .try-it-btn {
-      margin-bottom: 90px;
       font-size: 10px;
     }
   
