--- a/src/index.css
+++ b/src/index.css
@@ -2095,7 +2095,7 @@
     }
   
     .bill-item {
-      max-width: 320px; /* Limit the max width of each card */
+      width: 320px; /* Limit the max width of each card */
       padding: 20px; /* Add space inside the card */
     }
   
@@ -2711,7 +2711,7 @@
     }
   
     .instruction-separator {
-      margin-top: 200px;
+      margin-top: 150px;
     }
     /* Sets the font size of paragraphs in specific instruction items */
     .instruction-item-five p {
@@ -2726,7 +2726,7 @@
     }
   
     .bill-item {
-      max-width: 290px; /* Limit the max width of each card */
+      width: 290px; /* Limit the max width of each card */
       padding: 15px; /* Add space inside the card */
     }
   
@@ -3008,7 +3008,7 @@
     }
   
     .instruction-separator {
-      margin-top: 330px;
+      margin-top: 320px;
     }
     .try-it-btn {
       font-size: 14px;
@@ -3022,7 +3022,7 @@
     }
   
     .bill-item {
-      max-width: 380px; /* Limit the max width of each card */
+      width: 480px; /* Limit the max width of each card */
       padding: 15px; /* Add space inside the card */
     }
   
@@ -3270,7 +3270,7 @@
   
   /* Small Mobile Portrait */
   
-  @media (max-width: 390px) and (max-height: 830px) {
+  @media (max-width: 390px) and (max-height: 880px) {
     .full-screen-nav-links {
       display: none; /* Hides the desktop navigation on mobile */
     }
@@ -3417,7 +3417,7 @@
     }
   
     .instruction-separator {
-      margin-top: 200px;
+      margin-top: 180px;
     }
   
     .instruction-item-five p {
@@ -3436,7 +3436,7 @@
     }
   
     .bill-item {
-      max-width: 330px; /* Limit the max width of each card */
+      width: 340px; /* Limit the max width of each card */
       padding: 15px; /* Add space inside the card */
     }
   
@@ -3595,6 +3595,7 @@
     .about-page {
       padding: 30px 10px; /* Adds padding */
       width: 95%; /* Ensures full width for mobile */
+      font-size: 10px;
     }
   
     /* Header and Titles */
@@ -3602,6 +3603,11 @@
     .technologies h2,
     .meet-the-team h1 {
       font-size: 1.2rem; /* Further reduces title font size */
+      margin-bottom: 15px; /* Minimal space below titles */
+    }
+
+    .transparency h2{
+      font-size: 1.7rem; /* Further reduces title font size */
       margin-bottom: 15px; /* Minimal space below titles */
     }
   
